Fix a weird wrapping issue caused by graph.

--- a/src/main/webapp/sass-hidden/manager.sass
+++ b/src/main/webapp/sass-hidden/manager.sass
@@ -302,6 +302,9 @@ body
           font-size: 1rem
           line-height: 1.5rem
 
+        #weeks-performance-graph
+          width: 590px
+
         .helpful
           background-color: #d5d5d5
           padding: 5px
